# pysudoer

./: .gitignore  CHANGELOG.md  README.md  coverage.xml  pyproject.toml
.github/workflows/: build.yml
.pylint/: src  tests
pysudoer/: __init__.py  sudoer.py  sudoer_darwin.py  sudoer_linux.py  sudoer_options.py  sudoer_unix.py  sudoer_win32.py
src/: __init__.py  sudoer.py  sudoer_darwin.py  sudoer_linux.py  sudoer_options.py  sudoer_unix.py  sudoer_win32.py
tests/: shared.py  test_001_sudoer_options.py  test_002_sudoer.py  test_003_sudoer_unix.py  test_004_sudoer_darwin.py  test_005_sudoer_linux.py  test_006_sudoer_win32.py
