[tool.poetry]
name = "pysudoer"
version = "0.0.1"
description = "Run a subprocess with administrative privileges, prompting the user with a graphical OS dialog if necessary."
authors = ["qlrd <qlrddev@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "pysudoer"}]

[tool.poetry.dependencies]
python = ">=3.9, <=3.13"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pylint = "^3.0.3"
pytest-cov = "^4.1.0"
poethepoet = "^0.25.1"

[tool.poe.tasks]
format-src = "black ./pysudoer"
format-tests = "black ./tests"
format = ["format-src", "format-tests"]
lint.sequence = [
    { cmd = "pylint --rcfile .pylint/src ./pysudoer" },
    { cmd = "pylint --rcfile .pylint/tests ./tests"}
]
test.sequence = [
    { cmd = "pytest --cache-clear --cov=pysudoer --cov-report html ./tests"}
]

coverage= "pytest --cache-clear --cov=pysudoer --cov-report xml ./tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



